# microgpt-cpp

./: .gitignore  CMakeLists.txt  README.md  microgpt.cpp
.github/workflows/: pages.yml
docs/: README.md
docs/part1-python/: ch00-setup.md  ch01-data-tokenizer.md  ch02-first-neural-net.md  ch03-why-learning-works.md  ch04-value-and-backprop.md  ch05-transformer-and-training.md
docs/part2-cpp/: ch06-cpp-setup.md  ch07-python-to-cpp-bridge.md  ch08-value-struct.md  ch09-graph-arena.md  ch10-differentiable-ops.md  ch11-backward.md  ch12-nn-building-blocks.md  ch13-data-loading.md  ch14-parameters.md  ch15-gpt-forward.md  ch16-training-loop.md  ch17-inference.md  ch18-build-and-wrap-up.md
viz/: data.js  export_weights.cpp  index.html
